# diplom

./: README  README.md  data.json  pyproject.toml
diplom/: settings.py
users/: admin.py  auth_service.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_invitecode.py
